<resources>
    <string name="app_name">CineRikuy</string>
    <!--Activity Intro -->
    <string name="welcome">Bienvenido</string>
    <string name="cine_name">CineRikuy</string>
    <!--Activity Login -->
    <string name="login">Login</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="btnLogin">Ingresar</string>
    <string name="message">No tienes una cuenta?</string>
    <string name="enlace">Crear Cuenta</string>
    <!-- Activity Register-->
    <string name="register">Registro</string>
    <string name="name">Nombres</string>
    <string name="lastName">Apellidos</string>
    <string name="dni">DNI</string>
    <string name="phone">Celular</string>
    <string name="btnRegister">Registrar</string>
    <!-- Nav Header-->
    <string name="username">Username</string>
    <!-- Nav Menu-->
    <string name="home">Inicio</string>
    <string name="movie">Películas</string>
    <string name="candy">Dulceria</string>
    <string name="vote">Votación</string>
    <string name="account">Mi cuenta</string>
    <string name="shopping">Mis compras</string>
    <string name="help">Centro de ayuda</string>
    <string name="use">Usar CineRikuy</string>
    <string name="sesion">Cerrar Sesion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Home -->
    <string name="moviesPopular">Peliculas Populares</string>
    <string name="btn_Filtro">Elegir Cine</string>
    <!--Movie Detail -->
    <string name="btnComprar">Comprar</string>
    <string name="title_sinopsis">Sinopsis</string>
    <string name="title_idioma">Idioma</string>
    <string name="title_genero">Genero</string>
    <string name="title_directo">Director</string>
    <string name="title_actor">Actores</string>
    <string name="subtitulo">Subtitulado</string>
    <string name="doblado">Doblado</string>
    <string name="sinopsis">Después de encontrar un cuerpo anfitrión en el periodista de investigación Eddie Brock, el simbionte alienígena debe enfrentarse a un nuevo enemigo, Carnage, el alter ego del asesino en serie Cletus Kasady.</string>
    <!--Ticket Purchase -->
    <string name="name_cine">Nombre del Local</string>
    <string name="title_cantidad">Cantidad</string>
    <string name="title_total">Total</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_continue">Continuar</string>
    <string name="tickets">Tickets</string>

    <!--Purchase Detail -->
    <string name="title_purchase">Detalle de Compra</string>
    <string name="movie_purchase">Pelicula:</string>
    <string name="local_purchase">Local:</string>
    <string name="horario_purchase">Horario:</string>
    <string name="title_cant_entradas">Cantidad de Entradas</string>
    <string name="unid_entradas">unid. de</string>
    <string name="title_cant_products">Cantidad de Productos</string>
    <string name="unid_productos">unid. de productos</string>
    <string name="btn_volver">Volver</string>

    <!--My Shoppings-->
    <string name="title_transaction">Transacción:</string>
    <string name="title_local">Local:</string>
    <string name="title_fecha">Fecha:</string>

    <!--Informative Biometric -->
    <string name="message_biometric">¡Nueva Funcionalidad de\nAutenticación por Huella\nDactilar!</string>
    <string name="btn_how">¿Cómo usar?</string>
    <!--How Use -->
    <string name="message_howuse">Es simple. Solo necesitas registrar tu\nhuella dactilar una vez y, a partir de ahí,\npodrás iniciar sesión con solo un toque.\nOlvídate de recordar contraseñas complicadas.\n¡Tu huella dactilar es tu clave de acceso!</string>
    <string name="btn_acept">Aceptar</string>

</resources>