<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/movie"
            android:title="@string/movie"
            android:icon="@drawable/ic_movie"/>
        <item
            android:id="@+id/store"
            android:title="@string/candy"
            android:icon="@drawable/ic_store"/>
        <item
            android:id="@+id/vote"
            android:title="@string/vote"
            android:icon="@drawable/ic_vote"/>
    </group>
    <item
        android:title="@string/account">
        <menu>
            <group>
                <item
                    android:id="@+id/stores"
                    android:title="@string/shopping"
                    android:icon="@drawable/ic_shopping"/>
                <item
                    android:id="@+id/sesion"
                    android:title="@string/sesion"
                    android:icon="@drawable/ic_out"/>
            </group>
        </menu>
    </item>
    <item
        android:title="@string/help">
        <menu>
            <group>
                <item
                    android:id="@+id/help"
                    android:title="@string/use"
                    android:icon="@drawable/ic_question"/>
            </group>
        </menu>
    </item>

</menu>