<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_filter_location"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/title_purchase"
        android:textColor="#fff"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_purchase"
                android:layout_weight="0"
                android:textColor="#fff"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/title_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="My first Movie"
                android:textColor="#fff"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_purchase"
                android:layout_weight="0"
                android:textColor="#fff"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/title_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="My first Movie"
                android:textColor="#fff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horario_purchase"
                android:layout_weight="0"
                android:textColor="#fff"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/title_horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="19:00 pm"
                android:textColor="#fff"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cant_entradas"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/cantidadEntradas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                android:layout_weight="0"
                android:textColor="#fff"
                android:layout_marginStart="5dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/unid_entradas"
                android:textColor="#fff"/>
            <TextView
                android:id="@+id/precioTotalEntradas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:text="S/.20.00"
                android:textColor="#fff"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cant_products"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/cantidadProductos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                android:layout_weight="0"
                android:textColor="#fff"
                android:layout_marginStart="5dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/unid_entradas"
                android:textColor="#fff"/>
            <TextView
                android:id="@+id/precioTotalProductos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:text="S/.20.00"
                android:textColor="#fff"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_total"
                android:layout_weight="0"
                android:textColor="#fff"
                android:layout_marginStart="5dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="S/.40.00"
                android:textColor="#fff"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_volver"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15sp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_cancelar"
                android:text="Volver"
                android:textColor="#fff"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_pagar"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/btn_comprar2"
                android:text="Pagar"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>