<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context=".presenter.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_background" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.69"
            app:srcCompat="@drawable/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="330dp"
                android:layout_marginBottom="20dp"
                android:text="@string/login"
                android:textColor="#000"
                android:textSize="40sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/text_background"
                    android:drawableStart="@drawable/userperfil"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/user"
                    android:padding="8dp"
                    android:textColorHint="#BAAEAE" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/text_background"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColorHint="#BAAEAE"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnLogin"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_background"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/btnLogin"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70sp"
                    android:layout_marginTop="15sp"
                    android:text="@string/message"
                    android:textColor="#BAAEAE" />

                <TextView
                    android:id="@+id/enlaceCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/enlace"
                    android:textColor="#000"
                    android:textStyle="bold" />
            </LinearLayout>
            <ImageView
                android:id="@+id/btn_fingerprint"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:src="@drawable/ic_fingerprint"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>