<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_background2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="190dp"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textColor="#000"
                android:textSize="40sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <EditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:autofillHints=""
                    android:background="@drawable/text_background"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/user"
                    android:maxLength="8"
                    android:minLines="2"
                    android:padding="8dp"
                    android:textColorHint="#BAAEAE"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/text_background"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColorHint="#BAAEAE"
                    tools:ignore="LabelFor"
                    android:maxLength="8"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/text_background"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textCapWords|textAutoCorrect"
                    android:padding="8dp"
                    android:textColorHint="#BAAEAE"
                    tools:ignore="LabelFor"
                    android:maxLength="20"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">
                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/text_background"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/lastName"
                    android:inputType="textCapWords|textAutoCorrect"
                    android:padding="8dp"
                    android:textColorHint="#BAAEAE"
                    tools:ignore="LabelFor"
                    android:maxLength="20"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">
                <EditText
                    android:id="@+id/dni"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/text_background"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/dni"
                    android:inputType="number"
                    android:padding="8dp"
                    android:maxLength="8"
                    android:textColorHint="#BAAEAE"
                    tools:ignore="LabelFor"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/text_background"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:maxLength="9"
                    android:padding="8dp"
                    android:textColorHint="#BAAEAE"
                    tools:ignore="LabelFor"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_background"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/btnRegister"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>